--- a/Back_Vinculacion_Fema/appsettings.json
+++ b/Back_Vinculacion_Fema/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=vinculacionfema.mssql.somee.com;Initial Catalog=vinculacionfema;Persist Security Info=True;User ID=femaUGvinculac_SQLLogin_1;Password=9txbidp1p9;Trust Server Certificate=True"
+  }
 }
