--- a/Back_Vinculacion_Fema/appsettings.json
+++ b/Back_Vinculacion_Fema/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=vinculacionfema.mssql.somee.com;Initial Catalog=vinculacionfema;Persist Security Info=True;User ID=femaUGvinculac_SQLLogin_1;Password=9txbidp1p9;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=vinculacionfema.mssql.somee.com;Initial Catalog=vinculacionfema;Persist Security Info=True;User ID=femaUGvinculac_SQLLogin_1;Password=9txbidp1p9;Trust Server Certificate=True",
+    "DefaultConnectionTest": "Data Source=localhost;Initial Catalog=vinculacionfemaTest;Integrated Security=True;"
   }
 }
